WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309785
ANGLE: ContextMtl::setupDraw mode is unused and error-prone
https://bugs.webkit.org/show_bug.cgi?id=309785
Summary
ANGLE: ContextMtl::setupDraw mode is unused and error-prone
Kimmo Kinnunen
Reported
2026-03-12 06:36:55 PDT
ANGLE: ContextMtl::setupDraw mode is unused and error-prone
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-12 06:37:01 PDT
<
rdar://problem/172373825
>
Kimmo Kinnunen
Comment 2
2026-03-12 06:44:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60455
EWS
Comment 3
2026-03-13 01:11:24 PDT
Committed
309189@main
(1eb6e2b7f97b): <
https://commits.webkit.org/309189@main
> Reviewed commits have been landed. Closing PR #60455 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug