Cherry-pick 1eb6e2b7f97b. rdar://175717985

ANGLE: ContextMtl::setupDraw mode is unused and error-prone
    https://bugs.webkit.org/show_bug.cgi?id=309785
    rdar://172373825

    Reviewed by Dan Glastonbury.

    In ContextMtl::setupDraw(..., gl::PrimitiveMode mode, ...), the `mode`
    would not be used for anything. However, it is confusing. The original
    count, instances, type, indices parameters would be as what GL client
    passed, but mode would be modified to the possible rewritten primitive
    mode.

    If the primitive class is needed in the future, the setup should
    accept the Metal enums, in Metal section of the parameter list, to
    indicate the Metal implementation details. So either MTLPrimitiveType
    or MTLPrimitiveTopologyClass.

    * Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/ContextMtl.h:
    * Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/ContextMtl.mm:
    (rx::ContextMtl::drawTriFanArraysWithBaseVertex):
    (rx::ContextMtl::drawTriFanArraysLegacy):
    (rx::ContextMtl::drawLineLoopArrays):
    (rx::ContextMtl::drawArraysImpl):
    (rx::ContextMtl::drawTriFanElements):
    (rx::ContextMtl::drawLineLoopElements):
    (rx::ContextMtl::drawArraysProvokingVertexImpl):
    (rx::ContextMtl::drawElementsImpl):
    (rx::ContextMtl::setupDraw):
    (rx::ContextMtl::setupDrawImpl):
    (rx::ContextMtl::checkIfPipelineChanged):
    * Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_utils.h:
    * Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_utils.mm:
    (rx::mtl::GetPrimitiveTopologyClass): Deleted.

    Canonical link: https://commits.webkit.org/309189@main

Identifier: 305413.696@safari-7624.4-branch